--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
+  "prettier": {
+    "trailingComma": "all"
+  },
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+  },
+  "devDependencies": {
+    "prettier": "1.14.3"
   }
 }
